# apiron

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
apiron/: __init__.py  client.py  endpoint.py  exceptions.py
apiron/endpoint/: __init__.py  endpoint.py  json.py  streaming.py  stub.py  stub_endpoint.py
apiron/service/: __init__.py  base.py  discoverable.py
apiron/service/tests/: test_discoverable.py
apiron/tests/: test_client.py  test_endpoint.py
docs/: Makefile  advanced-usage.rst  conf.py  docs-meta.rst  getting-started.rst  index.rst  upgrade-guide.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api-reference/: endpoints.rst  index.rst  service-caller.rst  service-client.rst  services.rst
src/apiron/: __init__.py  client.py  exceptions.py
src/apiron/endpoint/: __init__.py  endpoint.py  json.py  streaming.py  stub.py
src/apiron/service/: __init__.py  base.py  discoverable.py
tests/: conftest.py  test_client.py  test_endpoint.py
tests/service/: test_base.py  test_discoverable.py  test_instantiated.py
