[metadata]
name = apiron
version = 6.0.0-post.1
description = apiron helps you cook a tasty client for RESTful APIs. Just don't wash it with SOAP.
author = Ithaka Harbors, Inc.
author_email = opensource@ithaka.org
url = https://github.com/ithaka/apiron
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://apiron.readthedocs.io
    Source=https://github.com/ithaka/apiron
    Tracker=https://github.com/ithaka/apiron/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
package_dir = =src
packages = find:
install_requires =
    requests>=2.11.1,<3

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
docs =
    importlib-metadata>=4.5.0,<5
    sphinx>=3.0,<4
    sphinx-autodoc-typehints>=1.12.0,<2
    sphinx-autobuild>=2021.3.14

######################
# Tool configuration #
######################

[coverage:run]
branch = True
source = apiron
omit =
    tests/*
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = True

[tool:pytest]
testpaths = tests
addopts = -ra --strict-markers --cov
xfail_strict = True

[tox:tox]
envlist = py37,py38,py39,py310
isolated_build = True

[testenv]
deps =
    pytest>=6.0.0,<7
    pytest-cov>=2.8.1,<3
    pytest-randomly>=3.4.0,<4
commands =
    pytest {posargs}

[testenv:docs]
extras =
    docs
commands =
    sphinx-build -b html docs {envtmpdir}/docs

[testenv:lint]
skip_install = True
deps =
    black
    pyflakes
commands =
    pyflakes {posargs:src tests}
    black {posargs:--check src tests}

[testenv:typecheck]
deps =
    mypy
    types-requests
commands =
    mypy --ignore-missing-imports {posargs:src tests}
