[metadata]
name = apiron
version = 8.0.0
description = apiron helps you cook a tasty client for RESTful APIs. Just don't wash it with SOAP.
author = Ithaka Harbors, Inc.
author_email = opensource@ithaka.org
url = https://github.com/ithaka/apiron
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://apiron.readthedocs.io
    Source=https://github.com/ithaka/apiron
    Tracker=https://github.com/ithaka/apiron/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
package_dir = =src
packages = find:
include_package_data = True
install_requires =
    requests>=2.11.1
    urllib3>=1.26.13

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
docs =
    sphinx>=7.2.2
    sphinx-autobuild>=2021.3.14

######################
# Tool configuration #
######################

[mypy]
python_version = 3.8
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[coverage:run]
branch = True
source = apiron
omit =
    tests/*
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src
    .tox/**/site-packages

[tool:pytest]
testpaths = tests
addopts = -ra --strict-markers --cov
xfail_strict = True

[tox:tox]
envlist = py38,py39,py310,py311,py312
isolated_build = True

[testenv]
package = wheel
wheel_build_env = .pkg
deps =
    pytest>=7.0.0
    pytest-cov>=4.1.0
    pytest-randomly>=3.15.0
commands =
    pytest {posargs}

[testenv:docs]
extras =
    docs
commands =
    sphinx-build -b html docs {envtmpdir}/docs

[testenv:lint]
skip_install = True
deps =
    black
    pyflakes
commands =
    pyflakes {posargs:src tests}
    black {posargs:--check src tests}

[testenv:typecheck]
deps =
    {[testenv]deps}
    mypy
    typing_extensions
    types-requests
    types-urllib3
commands =
    mypy {posargs:src tests}
passenv =
    TERM
